// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddAssetSearch.vue [Empty Search Input]: should be rendered correctly 1`] = `
<div
  class="asset-search"
>
  <search-input-stub
    autofocus="true"
    class="asset-search-input"
    maxlength="100"
    placeholder="Filter by Asset ID, Name or Ticker Symbol"
    value=""
  />
   
  <div
    class="asset-list asset-search-list"
  >
    <recycle-scroller
      buffer="NaN"
      class="asset-list-inner hidden-scrollbar"
      item-size="NaN"
      items="[object Object]"
      key-field="address"
      style="margin-right: 0px;"
    />
     
    <div
      class="scrollbar asset-list-scrollbar"
    >
      <div
        class="thumb"
        style="transform: translateY(0%); height: 0%;"
      />
    </div>
  </div>
</div>
`;

exports[`AddAssetSearch.vue [No Tokens Found]: should be rendered correctly 1`] = `
<div
  class="asset-search"
>
  <search-input-stub
    autofocus="true"
    class="asset-search-input"
    maxlength="100"
    placeholder="Filter by Asset ID, Name or Ticker Symbol"
    value="123456"
  />
   
  <div
    class="asset-list asset-search-list"
  >
    <recycle-scroller
      buffer="NaN"
      class="asset-list-inner hidden-scrollbar"
      item-size="NaN"
      items=""
      key-field="address"
      style="margin-right: 0px;"
    />
     
    <div
      class="scrollbar asset-list-scrollbar"
    >
      <div
        class="thumb"
        style="transform: translateY(0%); height: 0%;"
      />
    </div>
  </div>
</div>
`;

exports[`AddAssetSearch.vue [Token is Found]: should be rendered correctly 1`] = `
<div
  class="asset-search"
>
  <search-input-stub
    autofocus="true"
    class="asset-search-input"
    maxlength="100"
    placeholder="Filter by Asset ID, Name or Ticker Symbol"
    value="TEST"
  />
   
  <div
    class="asset-list asset-search-list"
  >
    <recycle-scroller
      buffer="NaN"
      class="asset-list-inner hidden-scrollbar"
      item-size="NaN"
      items="[object Object]"
      key-field="address"
      style="margin-right: 0px;"
    />
     
    <div
      class="scrollbar asset-list-scrollbar"
    >
      <div
        class="thumb"
        style="transform: translateY(0%); height: 0%;"
      />
    </div>
  </div>
</div>
`;
